# bitgeon

./: .gitignore  Cargo.toml  README.md  TODO.md  bitgeon - simple.drawio  bitgeon.drawio  config.ron
src/: application_logic.rs  backend.rs  file_processing.rs  lib.rs  main.rs  server.rs  settings.rs  transmission.rs  ui.rs  util.rs  widget.rs
