[package]
name = "bitgeon"
version = "0.1.0"
authors = ["Andy <19520383+LeCyberDucky@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
crossterm = "0.17.3"
argh = "0.1.3"
unicode-segmentation = "1.6.0"
walkdir = "2.3.1"
lazy_static = "1.4.0"
fancy-regex = "0.3.5"
path-absolutize = "3.0.6"
