[package]
name = "bitgeon"
version = "0.1.0"
authors = ["Andy <19520383+LeCyberDucky@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
crossterm = "0.17.3"
argh = "0.1.3"
unicode-segmentation = "1.6.0"
walkdir = "2.3.1"
fancy-regex = "0.3.5"
path-absolutize = "3.0.6"
thiserror = "1.0.20"
anyhow = "1.0.32"
async-std = "1.6.3"
once_cell = "1.4.1"
ron = "0.6.2"
igd = "0.11.1"
