[package]
name = "bitgeon"
version = "0.1.0"
authors = ["Andy <19520383+LeCyberDucky@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
crossterm = "0.19.0"
argh = "0.1.4"
unicode-segmentation = "1.7.1"
walkdir = "2.3.2"
fancy-regex = "0.5.0"
path-absolutize = "3.0.7"
thiserror = "1.0.24"
anyhow = "1.0.40"
async-std = "1.9.0"
once_cell = "1.7.2"
ron = "0.6.4"
igd = "0.12.0"
